# polychat

./: .gitignore  README.md  start.sh
backend/: backend-architecture.txt  package-lock.json  package.json
backend/src/: index.js
backend/src/middleware/: authenticateToken.js  create-global-chatroom.js  single-script.js  test-db.js
backend/src/routes/: auth.js  chatrooms.js  refresh-token.js
frontend/: frontend-architecture.txt
frontend/polychat/: package-lock.json  package.json
frontend/polychat/src/app/: layout.tsx  page copy.tsx  page.tsx
frontend/polychat/src/app/chat/[roomId]/: layout.tsx  page.tsx
frontend/polychat/src/app/chatrooms/: layout.tsx  page.tsx
frontend/polychat/src/app/chatrooms/create/: layout.tsx  page.tsx
frontend/polychat/src/app/components/: ChatRooms.tsx  CreateChatRooms.tsx  DashboardIcon.tsx  LoginForm.tsx  LoginIcon.tsx  ReduxProviders.tsx
frontend/polychat/src/app/context/: AuthContext.tsx
frontend/polychat/src/app/dashboard/: layout.tsx  page.tsx
frontend/polychat/src/app/login/: layout.tsx  page.tsx
frontend/polychat/src/store/: chatSlice.ts  store.ts
go-presence-service/: go-architecture.txt  go.mod  go.sum  main.go
go-presence-service/internal/models/: models.go
go-presence-service/internal/ws/: client.go  handler.go  presence.go
rust-ws-server/: Cargo.toml
rust-ws-server/src/: main.rs
