[package]
name = "rust-ws-server"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio-stream = "0.1"
dotenv = "0.15"